fixing home pointer and missing image files

--- a/content/contact.html
+++ b/content/contact.html
@@ -8,7 +8,7 @@
 				<a class="btn my_button" href="https://github.com/kroefeet" target="_blank" role="button">GitHub</a>
     		</div>
     		<div class="col-md-6 text-center">
-			   <img src="img/profile.jpg" class="img-fluid" alt="placeholder for professional picture"> 		
+			   <img src="static/profile.jpg" class="img-fluid" alt="placeholder for professional picture"> 		
     		</div>
     	   		
     	</div>
