attempting to display blog entries within blog page

--- a/content/index.html
+++ b/content/index.html
@@ -1,4 +1,10 @@
+{% extends "base.html"%}
 
+{% block title %}
+Law.Technology
+{% endblock title%}
+
+{% block content %}
 
         <div class="jumbotron jumbotron-fluid rounded light_div text-center">
         
@@ -52,5 +58,5 @@
      			</div>
      		
 
-
+{% endblock content%}
  
