--- a/content/projects.html
+++ b/content/projects.html
@@ -1,4 +1,10 @@
+{% extends "base.html"%}
 
+{% block title %}
+Projects
+{% endblock title%}
+
+{% block content %}
 
       
       <div class="row light_div rounded page_heading">
@@ -27,4 +33,6 @@
       <div class="tab-pane fade" id="list-kickstart" role="tabpanel" aria-labelledby="list-kickstart-list">I joined Kickstart Coding bootcamp to make some progress on my coding, pull my fragmented knowledge together, and code better. So far, so good.</div>
     </div>
   </div>
+  
+  {% endblock content %}
 
